@@ -1,3 +1,15 @@
+1999-04-09  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-mc.el (mime-mc-pgp-encrypt-region, mime-mc-pgp-sign-region,
+	mime-mc-process-region, mime-mc-pgp50-encrypt-region,
+	mime-mc-pgp50-sign-region, mime-mc-pgp50-process-region,
+	mime-mc-gpg-encrypt-region, mime-mc-gpg-sign-region,
+	mime-mc-gpg-process-region, mime-mc-insert-public-key): Identify
+	the version of SEMI as a comment field of ASCII armor.
+	(mime-mc-replace-comment-field): New function.
+	(mime-mc-comment-alist): New user option.
+	(TopLevel): Require `mime-def'.
+
 1999-04-08  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mime-mc.el (mime-mc-pgp-sign-region): Omit the micalg parameter
